# ImuBoxing

./: .gitignore  MeanAndStandardDeviandtion.txt  Telemetry.py
ImuBoxing/: CMakeLists.txt  main.cpp  package.xml
ImuBoxing/Classifier/: CMakeLists.txt  FeatureExtractor.cpp  KnnNode.cpp  KnnNode.h  PoseClassifier.cpp  TechniqueClassifier.cpp  main.cpp
ImuBoxing/Classifier/source/: CMakeLists.txt  DataDefinition.cpp  DataDefinition.h  FeatureExtractor.cpp  FeatureExtractor.h  PoseClassification.cpp  PoseClassification.h  Subscriber.cpp  Subscriber.h  TechniqueClassification.cpp  TechniqueClassification.h  Utils.cpp  Utils.h
ImuBoxing/Classifier/source/classes/: Data.cpp  Data.h  Group.cpp  Group.h  LabeledDistance.cpp  LabeledDistance.h  Technique.h
ImuBoxing/Classifier/source/strategy/: KMeans.cpp  KMeans.h  Knn.cpp  Knn.h  Knncpp
ImuBoxing/Classifier/test/: CMakeLists.txt  DataDefinitionTest.cpp  DataTest.cpp  GroupTest.cpp  SubscriberTest.cpp  UtilsTest.cpp
ImuBoxing/Classifier/test/mock/: Publisher.cpp  Publisher.h
ImuBoxing/Classifier/test/strategy/: KMeansTest.cpp  KnnTest.cpp
ImuBoxing/DataVisualization/: CMakeLists.txt  main.cpp
ImuBoxing/DataVisualization/source/: CMakeLists.txt  GroupDisplayer.cpp  GroupDisplayer.h
ImuBoxing/Telemetry/: CMakeLists.txt  main.cpp
ImuBoxing/Telemetry/source/: CMakeLists.txt  ImuNode.cpp  ImuNode.h  SpaceSensor.cpp  SpaceSensor.h
ImuBoxing/Telemetry/test/: CMakeLists.txt  SpaceSensorTest.cpp
ImuBoxing/Telemetry/test/mock/: Publisher.cpp
ImuBoxing/data/: dataTest.csv  guard.csv  guardQuaternion.csv  hookEnd.csv  hookEndQuaternion.csv  jabEnd.csv  jabEndQuaternion.csv  uppercutEnd.csv  uppercutEndQuaternion.csv
Telemetry/: CMakeLists.txt  main.cpp  package.xml
Telemetry/src/: CMakeLists.txt  ImuNode.cpp  ImuNode.h  SpaceSensor.cpp  SpaceSensor.h  main.cpp
Telemetry/test/: CMakeLists.txt  SpaceSensorTest.cpp
concepts/3dPrinting/: CMakeCache.txt  CMakeLists.txt  VTKPointSphere  VTKPointSphere.cpp  cilinder.cpp  cmake_install.cmake  updateRender.cpp
concepts/Catch2Bdd/: CMakeLists.txt  main.cpp
concepts/Catch2Bdd/src/: CMakeLists.txt  MathUtil.cpp  MathUtil.h
concepts/Catch2Bdd/test/: CMakeLists.txt  MathUtilTest.cpp
concepts/DataAcquiring/: imu_node.py
concepts/MachineLearningLibs/: CMakeLists.txt  Knn_Dlib.cpp  Knn_MlPack.cpp  Knn_Shark.cpp  Knn_opencv.cpp
concepts/MixedLanguageWrapper/: main.cpp
concepts/Subscriber/: Subscriber.cpp
